# quad

./: CHANGELOG.md  default.nix  quad.cabal  shell.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  quad-0.1.0.0-inplace.conf
nix/: sources.json
src/: Core.hs  Docker.hs  MyLib.hs  Runner.hs  Socket.hs
test/: Spec.hs
