cabal-version:      2.4
name:               quad
version:            0.1.0.0

author:             sbachlet
maintainer:         sbachlet@gmail.com

extra-source-files: CHANGELOG.md

library quad-core
    exposed-modules:
      Core
    default-extensions:
      BlockArguments,
      DeriveAnyClass,
      DeriveGeneric,
      LambdaCase,
      NoImplicitPrelude,
      OverloadedStrings,
      StrictData
    build-depends:
      base ^>=4.14.1.0,
      aeson,
      async,
      butcher,
      hslogger,
      http-client,
      http-conduit,
      http-types,
      network,
      record-hasfield,
      rio,
      scotty,
      serialise,
      stm,
      time,
      typed-process,
      wai-cors,
      yaml
    hs-source-dirs:
      src
    default-language:
      Haskell2010
    build-tool-depends: record-dot-preprocessor:record-dot-preprocessor
    ghc-options: -F -pgmF=record-dot-preprocessor

executable quad
    main-is:
      Main.hs
    build-depends:
      base ^>=4.14.1.0,
      quad-lib,
      rio

    hs-source-dirs:
      app
    default-language:
      Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite quad-test
    default-language:
      Haskell2010
    type:
      exitcode-stdio-1.0
    hs-source-dirs:
      test
    main-is:
      Spec.hs
    build-depends:
      base ^>=4.14.1.0,
      quad-lib,
      hspec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

